Remove CSS lint from tests for now

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,9 +2,9 @@ image: node:latest
 
 before_script:
   - npm install html5-lint
-  - npm install csslint -g
+  #- npm install csslint -g
 
 test:
   script:
     - node tests/html_lint.js
-    - csslint assets/css/elements.css
+    #- csslint assets/css/elements.css
