--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,4 +4,4 @@ deploy:
     - master
   script:
     - apt-get update -qq && apt-get install -y -qq lftp
-    - lftp -c "set ftp:ssl-allow no; open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_HOST; mirror -Rev / ./webspace/httpdocs/restaurantemuna.com/  --ignore-time --parallel=10 --exclude-glob .git* --exclude .git/"
+    - lftp -c "set ftp:ssl-allow no; open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_HOST; mirror -Rev /builds/jaicab/muna/ ./webspace/httpdocs/restaurantemuna.com/  --ignore-time --parallel=10 --exclude-glob .git* --exclude .git/"
